--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         z-index: 2;
     }
     .hero h1{font-size:2.4rem;margin:0 0 12px}
-    .hero p{color:var(--muted);margin:0 0 20px;line-height:1.5}
+    .hero p{color:var(--muted);margin:0 0 20px;line-height:1.5;text-align:justify;justify-content:space-between}
 
     .hero .portrait{
         width:220px;
@@ -694,7 +694,7 @@
                 <h2 style="text-align: center;">Nossa Trilha Sonora</h2>
                 <div class="player" id="player">
                     <div class="autoplay-message" id="autoplayMessage">
-                        A reprodução automática pode estar bloqueada. Clique em qualquer música para começar.
+                        A reprodução automática ainda está bloqueada. Clica em qualquer música pra dar play.
                     </div>
                     
                     <div class="player-header">
@@ -732,7 +732,7 @@
                         <!-- As faixas serão inseridas aqui via JavaScript -->
                     </div>
                 </div>
-                <p class="muted">Clique em uma faixa para tocar. Estas são as músicas que marcaram nossa história até aqui.</p>
+                <p class="muted" style="align-itens:center;text-align:justify;">Estas são só algumas das músicas que me lembram nossa, ainda pequena, história até aqui. Em breve vou colocar uma forma de adicionar mais músicas.</p>
             </div>
         </section>
     </main>
